# skillmap

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  run.sh
backend/app/: config.py  main.py
backend/app/features/roadmap/: agents.py  graph.py
backend/app/features/video/: agents.py  animator.py  graph.py
backend/app/pipelines/roadmap/: agents.py  graph.py  schemas.py
backend/app/pipelines/video/: agents.py  animator.py  graph.py
backend/app/pipelines/voice_agent/: agent.py
backend/app/routes/: roadmap_router.py  voice_router.py
backend/features/roadmap/: agents.py  graph.py  schemas.py
backend/features/video/: agents.py  animator.py  graph.py  schemas.py  tts.py
backend/tests/: test_roadmap_stream.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/roadmap/: page.tsx
frontend/app/tutor/: page.tsx
frontend/components/nav/: Sidebar.tsx
frontend/components/roadmap/: RoadmapChat.tsx
frontend/components/tutor/: VoiceAgent.tsx
