[project]
name = "cb-project"
version = "0.1.0"
description = "Career Roadmap Generator + Animated Learning Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "langgraph==0.2.28",
    "langchain-groq==0.2.0",
    "langchain-core==0.3.10",
    "moviepy==1.0.3",
    "pillow==10.4.0",
    "kokoro-onnx==0.4.0",
    "soundfile==0.12.1",
    "numpy>=2.0.2",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
